# MP

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  consts.ts  oldplayer.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  player.rs  server.rs
src/components/: FileExplorer.tsx  MiniPlayer.tsx  MiniPlayerSlider.tsx  PlayerFull.tsx  SideBar.tsx  button.tsx
src/other/: consts.ts  ffmpeg.ts  metadata.ts  player.ts  state.ts  utils.ts
