[package]
name = "nev"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nev_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
opt-level = 2
incremental = true
codegen-units = 256 # Split code into maximal chunks for parallel compilation

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.30.1", features = ["signal"] }
tokio = "1.49.0"
tiny_http = "0.12.0"
constime = "0.4.1"
symphonia = { version = "0.5.5", features = ['all'] }
dashmap = "6.1.0"
lofty = {version="0.22.4"}
rodio = "0.21.1"
lazy_static = "1.5.0"
